--- a/2-show number.html
+++ b/2-show number.html
@@ -60,7 +60,7 @@
         </tr>
     </table>
     <center style="line-height:50px;">
-        note:set (showNumber : true) for show value at top of point.
+        note:set (showNumber : true) for show value of point.
     </center>
     <center style="line-height:50px; background:#eee;margin-top:50px;">
         <a href="https://codepen.io/mohammadfeiz/pen/mGGKqL">live edit in codepen</a>
